# 42_amazing

./: .gitignore  Documentation.md  Makefile  README.md  a_maze_ing-1.0.0-py3-none-any.whl  a_maze_ing.py  config.txt  config.txt.example  pyproject.toml
.github/workflows/: lint.yml
src/: display.py
src/config/: __init__.py  config_loader.py
src/mazegen/: __init__.py  config_loader.py  generator.py  output.py  solver.py
